fixed false snapping on mobile

--- a/site/_scss/project-list-page.scss
+++ b/site/_scss/project-list-page.scss
@@ -5,7 +5,6 @@
 .project-list-page {
 
   #color-theme {
-
     @each $theme in $color-themes {
       &.color-#{nth($theme, 1)} {
 
@@ -19,7 +18,6 @@
         }
       }
     }
-
   }
 
   .fixed-navbar {
@@ -57,11 +55,13 @@
     bottom: 0;
     left: 0;
     right: 0;
-    height: 60px;
+    height: 70px;
     z-index: 2;
     text-align: center;
     transition: bottom 500ms;
     pointer-events: none;
+    font-size: 130%;
+    opacity: 0.5;
 
     &.hidden {
       bottom: -60px
@@ -79,7 +79,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    overflow-x: scroll;
+    overflow-y: auto;
     padding: 0 $outer-margin;
     transition: color $theme-transition-time, background-color $theme-transition-time;
     z-index: 1;
